--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="styles.css" type="text/css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-3.1.1.js"></script>
-    <script src="https://elated-spence-a7ecc3.netlify.com/tree.js"></script>
+    <script src="tree.js"></script>
     <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
     <title>jQuery Tree.js Decision Tree Plugin Demo</title>
     <style>
